[package]
name = "icy-epidural-underdog"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
axum-extra = { version = "0.8.0", features = ["cookie"] }
image = { version = "0.24.7", features = ["png"], default-features = false }
once_cell = "1.18.0"
shuttle-axum = "0.29.0"
shuttle-runtime = "0.29.0"
tokio = "1.28.2"
